# RuLRS-core

./: .gitignore  CMakeLists.txt  README.md  README_LICENSE.md  c_cpp_properties.json  platformio.ini  rename_script.py  replace_all.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-Bug_report.md  config.yml
.github/workflows/: artifacts.yml  build.yml  stale.yml
html/: index.js
src/: platformio.ini  user_defines.txt
src/basic/: RULRS.bas
src/boards/: esp8285-8285.json
src/html/: cw.html  footer-template.html  hardware.html  index.html  lr1121.html  mui.css  rulrs.css  scan.js
src/include/: LowPassFilter.h  README  common.h  compatibility.h  config.h  deferred.h  dynpower.h  hardware.h  native.h  rulrs_mapping.h  rxtx_intf.h  targets.h
src/lib/AnalogVbat/: devAnalogVbat.cpp  devAnalogVbat.h  median.h
src/lib/BLE/: devBLE.cpp  devBLE.h
src/lib/BUTTON/: devButton.h
src/lib/Backpack/: devBackpack.cpp
src/lib/Baro/: baro_bmp085.cpp  baro_bmp085.h  baro_bmp280_regs.h  baro_spl06.h  devBaro.cpp
src/lib/CONFIG/: config.cpp  config.h  config_legacy.h
src/lib/CRSF2MSP/: crsf2msp.cpp  crsf2msp.h  msp2crsf.cpp
src/lib/CrsfProtocol/: crsf_protocol.h
src/lua/: README.md  RuLRS.lua  rulrsV3.lua
src/python/: BFinitPassthrough.py  UARTupload.py  binary_configurator.py  binary_flash.py  build_env_setup.py  build_flags.py  build_html.py  opentx.py  rulrs_helpers.py  serve_html.py  setup.py  upload_via_esp8266_backpack.py
src/src/: common.cpp  dynpower.cpp  rx_main.cpp  tx_main.cpp
src/targets/: common.ini  diy_2400.ini  unified.ini
(+88 files in other folders)
